src/scss/components/_site-header.scss
.page-template-page-checkout {
  .k-header {
    #k-carttoggle,
    #k-searchicon,
    .k-header--navtoggle {
      display: none;
    }

    .k-header--main {
      .k-inner {
        justify-content: center;
      }
    }
  }
}

#k-carttoggle {
  margin: 0 1em 0.25em auto;
  position: relative;

  i {
    font-size: 200%;
  }
}

#k-searchicon {
  margin: 0 0.5em 0 0;
  font-size: 200%;
}

.k-header {
  position: sticky;
  top: -2.75em; // actual value gets set by JS based on the height of the promo bar above
  width: 100%;
  z-index: 101;
  background: $true-white;

  &__skip-to-main {
    position: fixed;
    top: 0;
    left: 50%;
    transform: translate(-50%, -105%);
    z-index: 99;
    border-top-left-radius: 0;
    border-top-right-radius: 0;
    transition: background 1s $ease-out-circ, color 1s $ease-out-circ,
      border-color 1s $ease-out-circ, transform 0.35s $ease-out-circ !important;

    &--focused {
      transform: translate(-50%, 0);
    }
  }

  .k-has-dropdown {
    position: relative;

    & > a {
      position: relative;

      span {
        font-size: 50%;
        position: absolute;
        top: 50%;
        right: -2em;
        transform: translateY(-50%);
        color: $highlight;
      }
    }
  }

  .k-dropdown {
    height: 0;
    overflow: hidden;
    transition: height 0.2s $ease-out-circ;
    padding-left: 1em;

    &--liner {
      padding: 1em 0;
    }

    li {
      font-size: 80%;
      margin-right: 0;
      white-space: nowrap;
      display: block;
      margin-bottom: 1em;
    }
  }

  &--traveling {
    box-shadow: 0 0 3px -2px $bg-dark;
  }

  &.is-open {
    position: fixed;

    .k-header {
      &--nav {
        transform: translateY(0);

        &__content {
          border-bottom: 0.125em solid $primary;
        }
      }

      &--navtoggle {
        &__line {
          &:first-child,
          &:last-child {
            top: 50%;
          }

          &:nth-child(2) {
            opacity: 0;
          }

          &:first-child {
            transform: translateY(-50%) rotate(45deg);
          }

          &:last-child {
            transform: translateY(-50%) rotate(-45deg);
          }
        }
      }
    }
  }

  &--top {
    background: $black;
    color: $true-white;
    text-align: right;

    .k-inner {
      padding: 0.25em 0;
    }

    span {
      font-size: 70%;
    }
  }

  &__newsletter-signup {
    display: none;
    background: $black;

    form {
      text-align: right;
      margin-bottom: 0;
      padding-bottom: 1em;
    }

    fieldset {
      width: 100%;
      padding: 1em 0;
      display: inline-block;
      text-align: left;
    }

    input {
      font-style: 140%;
      display: inline-block;
      vertical-align: middle;
      color: $true-white;
    }

    button {
      display: inline-block;
    }
  }

  &__newsletter-trigger {
    cursor: pointer;
    transition: color 0.3s $ease-out-circ;

    &:hover {
      color: $primary;
    }
  }

  &__newsletter-label {
    color: $true-white;
  }

  &--main {
    background: $true-white;

    .k-inner {
      padding: 0.5em 0;
      display: flex;
      justify-content: space-between;
      align-items: center;
      background: $true-white;
    }
  }

  &--logo {
    width: 3.5em;
    transition: transform 0.4s $ease-out-circ;

    img {
      display: block;
      max-width: 100%;
    }
  }

  &--nav {
    position: absolute;
    width: 100%;
    transition: transform 1s $ease-out-circ;
    transform: translateY(-150%);
    z-index: -1;
    background: $true-white;

    &__content {
      padding: 2em 5% 2em 5%;
    }

    ul {
      padding: 0;
      margin: 0;
      list-style-type: none;
    }

    li {
      margin-bottom: 0.5em;
    }

    a {
      color: $black;
      // font-size: 125%;
    }

    .k-dropdown--liner {
      a {
        font-size: 1rem;
      }
    }
  }

  &--navtoggle {
    width: 2em;
    height: 1.5em;
    position: relative;

    &__line {
      position: absolute;
      height: 2px;
      width: 100%;
      background: $black;
      transform: translateY(-50%);
      transition: transform 0.4s $ease-out-circ;

      &:nth-child(2) {
        top: 50%;
        transition: opacity 0.4s $ease-out-circ;
      }

      &:nth-child(3) {
        top: 100%;
      }
    }
  }
}

@media (min-width: $bp-md) {
  #k-carttoggle {
    margin: auto;

    i {
      font-size: 100%;
    }
  }

  #k-searchicon {
    margin: auto;
    font-size: 100%;
  }

  .k-header {
    &--traveling {
      .k-header--logo {
        transform: scale(0.7);
      }
    }

    .k-has-dropdown {
      & > a span {
        display: none;
      }
    }

    .k-dropdown {
      position: absolute;
      width: auto;
      top: 7.5em;
      z-index: 102;
      padding-left: 0;

      li {
        font-size: 100%;
        margin-bottom: 1.25em;
        line-height: 1;
      }

      a {
        color: $true-white;
      }
    }

    &--top {
      .k-inner {
        display: flex;
        justify-content: space-between;
        padding: 0.75em 0;
      }
    }

    &__newsletter-signup {
      form {
        display: flex;
        flex-direction: row;
        align-items: center;
        justify-content: flex-end;
        padding-bottom: 0;

        fieldset {
          width: auto;
          flex-basis: auto;
          padding: 1em 0.5em;
        }
      }
    }

    &--main {
      position: relative;
    }

    &--logo {
      width: 6.25em;
    }

    &--nav {
      z-index: 2;
      width: 88.889%;
      top: 50%;
      left: 5.55%;
      transform: translateY(-50%);
      text-align: left;
      background: transparent;
      pointer-events: none;

      &__content {
        padding: 0;
        display: flex;
        justify-content: flex-end;
      }

      ul {
        padding: 0;

        li:first-child {
          margin-left: 0;
        }
      }

      li {
        display: inline-block;
        margin-bottom: 0;
        margin-right: 0.75em;
        pointer-events: all;
      }

      a {
        font-size: 90%;
      }
    }

    &--navtoggle {
      display: none;
    }
  }
}

@media (min-width: $bp-lg) {
  .k-header {
    &--main {
      .k-inner {
        padding: 0;
      }
    }

    &--logo {
      margin: auto;
      transform: translateY(-1.125em);
    }

    &--nav {
      &__content {
        justify-content: space-between;
      }

      ul {
        li:last-child {
          margin-right: 0;
        }
      }

      li {
        display: inline-block;
        margin-right: 1em;
      }

      a {
        font-size: 110%;
      }
    }
  }
}

@media (min-width: $bp-xl) {
  .k-header {
    &--nav {
      width: 94.44%;
      left: 2.78%;
    }
  }
}

